<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">
            <ImageView
                android:id="@+id/main_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:transitionName="poster"
                app:layout_collapseMode="parallax" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_protection_scrim_height"
                android:layout_gravity="bottom"
                android:layout_alignBottom="@+id/main_backdrop"
                android:background="@drawable/photo_background_protection"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v7.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            app:useDefaultMargins="true"
            android:layout_height="match_parent"
            app:columnCount="2">
            <TextView
                app:layout_column="0"
                app:layout_row="0"
                android:text="@string/title"
                style="@style/left_column_bold" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="0"
                tools:text="@string/example_title"
                android:id="@+id/grid_title" />
            <TextView
                style="@style/left_column_bold"
                app:layout_column="0"
                app:layout_row="1"
                android:text="@string/released" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="1"
                tools:text="@string/example_release"
                android:id="@+id/grid_released" />
            <TextView
                style="@style/left_column_bold"
                android:text="@string/runtime"
                app:layout_column="0"
                app:layout_row="2" />
            <TextView
                style="@style/right_column_normal"
                tools:text="@string/example_runtime"
                app:layout_column="1"
                app:layout_row="2"
                android:id="@+id/grid_runtime" />
            <TextView
                android:text="@string/director"
                app:layout_column="0"
                app:layout_row="3"
                style="@style/left_column_bold" />
            <TextView
                style="@style/right_column_normal"
                tools:text="@string/example_director"
                app:layout_column="1"
                app:layout_row="3"
                android:id="@+id/grid_director" />
            <TextView
                style="@style/left_column_bold"
                app:layout_column="0"
                app:layout_row="4"
                android:text="@string/Genre" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="4"
                tools:text="@string/example_genre"
                android:id="@+id/grid_genre" />
            <TextView
                style="@style/left_column_bold"
                android:text="@string/Writer"
                app:layout_column="0"
                app:layout_row="5" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="5"
                android:layout_width="0dp"
                tools:text="@string/example_writer"
                android:id="@+id/grid_writers" />
            <TextView
                style="@style/left_column_bold"
                android:text="@string/actors"
                app:layout_column="0"
                app:layout_row="6" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="6"
                tools:text="@string/example_actors"
                android:id="@+id/grid_actors" />
            <TextView
                app:layout_column="0"
                app:layout_row="7"
                style="@style/left_column_bold"
                android:text="@string/plot" />
            <TextView
                app:layout_column="1"
                app:layout_row="7"
                tools:text="@string/example_full_plot"
                style="@style/right_column_normal"
                android:id="@+id/grid_plot"/>
        </android.support.v7.widget.GridLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>